fix image zoom alignment

--- a/src/Components/Productdisplay/ProductDisplay.css
+++ b/src/Components/Productdisplay/ProductDisplay.css
@@ -27,7 +27,10 @@
   background: #f9f8fa;
   border: 1px solid #ececec;
 }
-
+.productdisplay-img {
+  margin-top: 50px;
+  margin-left: 20px;
+}
 .productdisplay-main-img {
   width: 340px;
   height: 420px;
@@ -37,6 +40,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+}
+.productdisplay-main-img img:hover {
+  transform: scale(1.41);
+  cursor: zoom-in;
 }
 
 /* Responsive right section */
